--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
                 <artifactId>frontend-maven-plugin</artifactId>
                 <version>1.6</version>
                 <configuration>
+                    <workingDirectory>src/main/client</workingDirectory>
                     <nodeVersion>v8.8.1</nodeVersion>
                 </configuration>
                 <executions>
