Make tests run in Maven lifecycle

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
                             <arguments>run-script build</arguments>
                         </configuration>
                     </execution>
+                    <execution>
+                        <id>npm-test</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run-script single-test</arguments>
+                        </configuration>
+                        <phase>test</phase>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
