Fix e2e and fold into Maven build

--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,7 @@
                             <goal>npm</goal>
                         </goals>
                         <configuration>
-                            <arguments>run-script single-test</arguments>
+                            <arguments>run-script e2e</arguments>
                         </configuration>
                         <phase>test</phase>
                     </execution>
