Add notes on ng build --watch

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,6 +7,11 @@
             "label": "ng-build",
             "type": "shell",
             "command": "src/main/client/ng build"
+        },
+        {
+            "label": "ng-watch",
+            "type": "shell",
+            "command": "src/main/client/ng build --watch"
         }
     ]
 }
