--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "path-parse": "~1.0.7",
     "puppeteer": "^13.0.0",
     "tslint": "^6.1.3",
     "typescript": "~4.4.3"
